--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6048.870363251631!2d-74.00921838316609!3d40.70843550722085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a5c6512a7d%3A0xd0cd5a687aea106e!2sFlatiron+School!5e0!3m2!1sen!2sus!4v1506114759818" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
   
 </body>
 </html>
