--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,13 @@
   <form action="#" method="post">
     <label for="fullname">Name*</label>
     <input type="text" id="fullname" name="fullname" placeholder="first and last name" required />
+    <label for="email">Email*</label>
+    <input type="email" name="email" id="email" placeholder="your email" required />
+    <label for="phone">Phone</label>
+    <input type="tel" name="phone" id="phone" placeholder="your phone number" />
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" value="Send">
   </form>
 
 </body>
